# data-science-concepts

./: .flake8  .gitignore  README.md  add_git_hooks.sh  pyproject.toml
notebooks/dimensionality_reduction/: PCA.ipynb
notebooks/statistics/: z_value_and_statistics.ipynb
notebooks/statistics/hypothesis_testing/: a_b_testing.ipynb  a_b_testing_backup.ipynb  z_score_and_p_value.ipynb
